--- a/setup.cfg
+++ b/setup.cfg
@@ -1,23 +1,24 @@
 [metadata]
 name = Twitch
-version = 1.0.0
-author = Eli Reid
-author_email =  EliR@Elireid.com
-description = Twitch library for chat, api, pubs, and eventsub
+version = 0.0.01
+authors = [
+  { name="Eli Reid", email="EliR@Elireid.com" },
+]
+description = "Twitch library for chat, api, pubs, and eventsub"
 long_description = file: README.md, LICENSE.txt
 long_description_content_type = text/markdown
-url = https://github.com/eli-reid/twitch
+url = "https://github.com/eli-reid/twitch"
 project_urls =
-    Bug Tracker = https://github.com/eli-reid/twitch/-/issues
-    repository = https://github.com/eli-reid/twitch
-classifiers =
-    Programming Language :: Python :: 3
-    License :: OSI Approved :: MIT License
-    Operating System :: OS Independent
+    "Bug Tracker" = "https://github.com/eli-reid/twitch/-/issues"
+    "repository" = "https://github.com/eli-reid/twitch"
+classifiers = [
+    "Programming Language :: Python :: 3",
+    "License :: OSI Approved :: MIT License",
+    "Operating System :: OS Independent",
+    ]
 
 [options]
-package_dir =
-    = Twitch
+package_dir = Twitch
 packages = find:
 python_requires = >=3.10
 
